--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "envalid": "^8.0.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "slugify": "^1.6.6"
   }
